# CustomerChurnAnalysis

./: DataProcessor.py  GenerateReport.py  ModelBuilder.py  README.md  main.py  pyproject.toml
Constants/: DataFields.py
