[tool.poetry]
name = "customerchurnanalysis"
version = "0.1.0"
description = ""
authors = ["Jin <nancygoodluck233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
reportlab = "^4.2.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
